--- a/config/nginx/vhost.conf
+++ b/config/nginx/vhost.conf
@@ -1,45 +1,37 @@
-# server {
-#     listen 80;
-
-#     server_name  yt.vm.test;
-#     set $MAGE_ROOT /app/yt;
-
-#     include /opt/docker/etc/nginx/vhost.d/mgt.conf;
-
-#     error_log /var/log/nginx/error_log error;
-# }
-
-# ##############
-# # SSL
-# ##############
-
-# server {
-#     listen 443 ssl http2;
-
-#     server_name  yt.vm.test;
-#     set $MAGE_ROOT /app/yt;
-
-#     fastcgi_buffers 16 16k;
-#     fastcgi_buffer_size 32k;
-#     proxy_buffer_size 128k;
-#     proxy_buffers 4 256k;
-#     proxy_busy_buffers_size 256k;
-
-#     include /opt/docker/etc/nginx/vhost.d/mgt.conf;
-#     include /opt/docker/etc/nginx/vhost.d/ssl.conf;
-
-#     error_log /var/log/nginx/error_log error;
-# }
-
-
-
 server {
     listen 80;
 
-    server_name  bom.vm.test;
-    set $MAGE_ROOT /app/bom;
+    server_name eticket.vm.test;
 
-    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
+    root /app/e-ticket/phabricator/webroot;
+
+    location / {
+        index index.php;
+        rewrite ^/(.*)$ /index.php?__path__=/$1 last;
+    }
+
+    location /index.php {
+        fastcgi_pass php;
+        fastcgi_index index.php;
+
+        #required if PHP was built with --enable-force-cgi-redirect
+        fastcgi_param REDIRECT_STATUS 200;
+
+        #variables to make the $_SERVER populate in PHP
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param QUERY_STRING $query_string;
+        fastcgi_param REQUEST_METHOD $request_method;
+        fastcgi_param CONTENT_TYPE $content_type;
+        fastcgi_param CONTENT_LENGTH $content_length;
+
+        fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+
+        fastcgi_param GATEWAY_INTERFACE CGI/1.1;
+        fastcgi_param SERVER_SOFTWARE nginx/$nginx_version;
+
+        fastcgi_param REMOTE_ADDR $remote_addr;
+    }
+
 
     error_log /var/log/nginx/error_log error;
 }
@@ -51,8 +43,36 @@ server {
 server {
     listen 443 ssl http2;
 
-    server_name  bom.vm.test;
-    set $MAGE_ROOT /app/bom;
+    server_name eticket.vm.test;
+
+    root /app/e-ticket/phabricator/webroot;
+
+    location / {
+        index index.php;
+        rewrite ^/(.*)$ /index.php?__path__=/$1 last;
+    }
+
+    location /index.php {
+        fastcgi_pass php;
+        fastcgi_index index.php;
+
+        #required if PHP was built with --enable-force-cgi-redirect
+        fastcgi_param REDIRECT_STATUS 200;
+
+        #variables to make the $_SERVER populate in PHP
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param QUERY_STRING $query_string;
+        fastcgi_param REQUEST_METHOD $request_method;
+        fastcgi_param CONTENT_TYPE $content_type;
+        fastcgi_param CONTENT_LENGTH $content_length;
+
+        fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+
+        fastcgi_param GATEWAY_INTERFACE CGI/1.1;
+        fastcgi_param SERVER_SOFTWARE nginx/$nginx_version;
+
+        fastcgi_param REMOTE_ADDR $remote_addr;
+    }
 
     fastcgi_buffers 16 16k;
     fastcgi_buffer_size 32k;
@@ -60,119 +80,7 @@ server {
     proxy_buffers 4 256k;
     proxy_busy_buffers_size 256k;
 
-    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
     include /opt/docker/etc/nginx/vhost.d/ssl.conf;
-
-    error_log /var/log/nginx/error_log error;
-}
-
-
-
-server {
-    listen 80;
-
-    server_name  mgt240.vm.test;
-    set $MAGE_ROOT /app/mgt240;
-
-    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
-
-    fastcgi_buffers 16 16k;
-    fastcgi_buffer_size 32k;
-    proxy_buffer_size 128k;
-    proxy_buffers 4 256k;
-    proxy_busy_buffers_size 256k;
-
-    error_log /var/log/nginx/error_log error;
-}
-
-##############
-# SSL
-##############
-
-server {
-    listen 443 ssl http2;
-
-    server_name  mgt240.vm.test;
-    set $MAGE_ROOT /app/mgt240;
-
-    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
-    include /opt/docker/etc/nginx/vhost.d/ssl.conf;
-
-    fastcgi_buffers 16 16k;
-    fastcgi_buffer_size 32k;
-    proxy_buffer_size 128k;
-    proxy_buffers 4 256k;
-    proxy_busy_buffers_size 256k;
-
-    error_log /var/log/nginx/error_log error;
-}
-
-server {
-    listen 80;
-
-    server_name  yt-pcms.vm.test;
-    set $MAGE_ROOT /app/yt-pcms;
-
-    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
-
-    fastcgi_buffers 16 16k;
-    fastcgi_buffer_size 32k;
-    proxy_buffer_size 128k;
-    proxy_buffers 4 256k;
-    proxy_busy_buffers_size 256k;
-
-    error_log /var/log/nginx/error_log error;
-}
-
-server {
-    listen 443 ssl http2;
-
-    server_name  yt-pcms.vm.test;
-    set $MAGE_ROOT /app/yt-pcms;
-
-    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
-    include /opt/docker/etc/nginx/vhost.d/ssl.conf;
-
-    fastcgi_buffers 16 16k;
-    fastcgi_buffer_size 32k;
-    proxy_buffer_size 128k;
-    proxy_buffers 4 256k;
-    proxy_busy_buffers_size 256k;
-
-    error_log /var/log/nginx/error_log error;
-}
-
-server {
-    listen 80;
-
-    server_name  mgt241.vm.test;
-    set $MAGE_ROOT /app/mgt241;
-
-    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
-
-    fastcgi_buffers 16 16k;
-    fastcgi_buffer_size 32k;
-    proxy_buffer_size 128k;
-    proxy_buffers 4 256k;
-    proxy_busy_buffers_size 256k;
-
-    error_log /var/log/nginx/error_log error;
-}
-
-server {
-    listen 443 ssl http2;
-
-    server_name  mgt241.vm.test;
-    set $MAGE_ROOT /app/mgt241;
-
-    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
-    include /opt/docker/etc/nginx/vhost.d/ssl.conf;
-
-    fastcgi_buffers 16 16k;
-    fastcgi_buffer_size 32k;
-    proxy_buffer_size 128k;
-    proxy_buffers 4 256k;
-    proxy_busy_buffers_size 256k;
 
     error_log /var/log/nginx/error_log error;
 }
