--- a/config/nginx/vhost.conf
+++ b/config/nginx/vhost.conf
@@ -57,6 +57,33 @@ server {
 }
 
 
+server {
+    listen 80;
+
+    server_name  mgtpos.vm.test;
+    set $MAGE_ROOT /app/mgtpos;
+
+    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
+
+    error_log /var/log/nginx/error_log error;
+}
+
+##############
+# SSL
+##############
+
+server {
+    listen 443 ssl http2;
+
+    server_name  mgtpos.vm.test;
+    set $MAGE_ROOT /app/mgtpos;
+
+    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
+    include /opt/docker/etc/nginx/vhost.d/ssl.conf;
+
+    error_log /var/log/nginx/error_log error;
+}
+
 
 # server {
 #     listen 80;
