--- a/config/nginx/vhost.conf
+++ b/config/nginx/vhost.conf
@@ -177,3 +177,39 @@ server {
 
     error_log /var/log/nginx/error_log error;
 }
+
+server {
+    listen 80;
+
+    server_name  pdm.vm.test;
+    set $MAGE_ROOT /app/pdm;
+
+    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
+
+    fastcgi_buffers 16 16k;
+    fastcgi_buffer_size 32k;
+    proxy_buffer_size 128k;
+    proxy_buffers 4 256k;
+    proxy_busy_buffers_size 256k;
+
+    error_log /var/log/nginx/error_log error;
+}
+
+server {
+    listen 443 ssl http2;
+
+    server_name  pdm.vm.test;
+    set $MAGE_ROOT /app/pdm;
+
+    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
+    include /opt/docker/etc/nginx/vhost.d/ssl.conf;
+
+
+    fastcgi_buffers 16 16k;
+    fastcgi_buffer_size 32k;
+    proxy_buffer_size 128k;
+    proxy_buffers 4 256k;
+    proxy_busy_buffers_size 256k;
+
+    error_log /var/log/nginx/error_log error;
+}
