--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - ./src/yt-pcms:/app/yt-pcms
       - ./src/ee_240/mgt240:/app/mgt240
       - ./src/mgt_ee_241/root:/app/mgt241
+      - /home/vm/work/env/dockers/src/mgt242/project-enterprise-edition:/app/pdm
       - ./config/nginx/vhost.conf:/opt/docker/etc/nginx/vhost.conf
       - ./config/nginx/mgt.conf:/opt/docker/etc/nginx/vhost.d/mgt.conf
     env_file: .env
