--- a/bin/webserver/php/php.ini
+++ b/bin/webserver/php/php.ini
@@ -28,7 +28,7 @@ xdebug.remote_log = /app/xdebug.log
 
 ; profiler settings
 ;xdebug.profiler_append=0
-;xdebug.profiler_enable=1
+xdebug.profiler_enable=0
 ;xdebug.profiler_enable_trigger=0
 ;xdebug.profiler_output_dir="/var/log/xdebug/profile"
 ;xdebug.profiler_output_name=timestamp
