--- a/config/nginx/vhost.conf
+++ b/config/nginx/vhost.conf
@@ -31,87 +31,11 @@
 #     error_log /var/log/nginx/error_log error;
 # }
 
-
-
-server {
-    listen 80;
-
-    server_name  bom.vm.test;
-    set $MAGE_ROOT /app/bom;
-
-    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
-
-    error_log /var/log/nginx/error_log error;
-}
-
-##############
-# SSL
-##############
-
-server {
-    listen 443 ssl http2;
-
-    server_name  bom.vm.test;
-    set $MAGE_ROOT /app/bom;
-
-    fastcgi_buffers 16 16k;
-    fastcgi_buffer_size 32k;
-    proxy_buffer_size 128k;
-    proxy_buffers 4 256k;
-    proxy_busy_buffers_size 256k;
-
-    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
-    include /opt/docker/etc/nginx/vhost.d/ssl.conf;
-
-    error_log /var/log/nginx/error_log error;
-}
-
-
-
-server {
-    listen 80;
-
-    server_name  mgt240.vm.test;
-    set $MAGE_ROOT /app/mgt240;
-
-    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
-
-    fastcgi_buffers 16 16k;
-    fastcgi_buffer_size 32k;
-    proxy_buffer_size 128k;
-    proxy_buffers 4 256k;
-    proxy_busy_buffers_size 256k;
-
-    error_log /var/log/nginx/error_log error;
-}
-
-##############
-# SSL
-##############
-
-server {
-    listen 443 ssl http2;
-
-    server_name  mgt240.vm.test;
-    set $MAGE_ROOT /app/mgt240;
-
-    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
-    include /opt/docker/etc/nginx/vhost.d/ssl.conf;
-
-    fastcgi_buffers 16 16k;
-    fastcgi_buffer_size 32k;
-    proxy_buffer_size 128k;
-    proxy_buffers 4 256k;
-    proxy_busy_buffers_size 256k;
-
-    error_log /var/log/nginx/error_log error;
-}
-
 server {
     listen 80;
 
     server_name  yt-pcms.vm.test;
-    set $MAGE_ROOT /app/yt-pcms;
+    set $MAGE_ROOT /yt-pcms;
 
     include /opt/docker/etc/nginx/vhost.d/mgt.conf;
 
@@ -128,7 +52,7 @@ server {
     listen 443 ssl http2;
 
     server_name  yt-pcms.vm.test;
-    set $MAGE_ROOT /app/yt-pcms;
+    set $MAGE_ROOT /yt-pcms;
 
     include /opt/docker/etc/nginx/vhost.d/mgt.conf;
     include /opt/docker/etc/nginx/vhost.d/ssl.conf;
@@ -145,8 +69,8 @@ server {
 server {
     listen 80;
 
-    server_name  mgt241.vm.test;
-    set $MAGE_ROOT /app/mgt241;
+    server_name  pdm.vm.test;
+    set $MAGE_ROOT /pdm;
 
     include /opt/docker/etc/nginx/vhost.d/mgt.conf;
 
@@ -162,8 +86,8 @@ server {
 server {
     listen 443 ssl http2;
 
-    server_name  mgt241.vm.test;
-    set $MAGE_ROOT /app/mgt241;
+    server_name  pdm.vm.test;
+    set $MAGE_ROOT /pdm;
 
     include /opt/docker/etc/nginx/vhost.d/mgt.conf;
     include /opt/docker/etc/nginx/vhost.d/ssl.conf;
@@ -181,8 +105,8 @@ server {
 server {
     listen 80;
 
-    server_name  pdm.vm.test;
-    set $MAGE_ROOT /app/pdm;
+    server_name  pcms.vm.test;
+    set $MAGE_ROOT /pcms;
 
     include /opt/docker/etc/nginx/vhost.d/mgt.conf;
 
@@ -198,8 +122,44 @@ server {
 server {
     listen 443 ssl http2;
 
-    server_name  pdm.vm.test;
-    set $MAGE_ROOT /app/pdm;
+    server_name  pcms.vm.test;
+    set $MAGE_ROOT /pcms;
+
+    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
+    include /opt/docker/etc/nginx/vhost.d/ssl.conf;
+
+
+    fastcgi_buffers 16 16k;
+    fastcgi_buffer_size 32k;
+    proxy_buffer_size 128k;
+    proxy_buffers 4 256k;
+    proxy_busy_buffers_size 256k;
+
+    error_log /var/log/nginx/error_log error;
+}
+
+server {
+    listen 80;
+
+    server_name  blank242.vm.test;
+    set $MAGE_ROOT /blank242;
+
+    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
+
+    fastcgi_buffers 16 16k;
+    fastcgi_buffer_size 32k;
+    proxy_buffer_size 128k;
+    proxy_buffers 4 256k;
+    proxy_busy_buffers_size 256k;
+
+    error_log /var/log/nginx/error_log error;
+}
+
+server {
+    listen 443 ssl http2;
+
+    server_name  blank242.vm.test;
+    set $MAGE_ROOT /blank242;
 
     include /opt/docker/etc/nginx/vhost.d/mgt.conf;
     include /opt/docker/etc/nginx/vhost.d/ssl.conf;
