--- a/config/nginx/vhost.conf
+++ b/config/nginx/vhost.conf
@@ -15,7 +15,7 @@
 
 # server {
 #     listen 443 ssl http2;
-
+ 
 #     server_name  yt.vm.test;
 #     set $MAGE_ROOT /app/yt;
 
@@ -34,8 +34,8 @@
 server {
     listen 80;
 
-    server_name  yt-pcms.vm.test;
-    set $MAGE_ROOT /yt-pcms;
+    server_name  mkt.vm.test;
+    set $MAGE_ROOT /ggg_mkt;
 
     include /opt/docker/etc/nginx/vhost.d/mgt.conf;
 
@@ -51,8 +51,8 @@ server {
 server {
     listen 443 ssl http2;
 
-    server_name  yt-pcms.vm.test;
-    set $MAGE_ROOT /yt-pcms;
+    server_name mkt.vm.test;
+    set $MAGE_ROOT /ggg_mkt;
 
     include /opt/docker/etc/nginx/vhost.d/mgt.conf;
     include /opt/docker/etc/nginx/vhost.d/ssl.conf;
@@ -66,110 +66,3 @@ server {
     error_log /var/log/nginx/error_log error;
 }
 
-server {
-    listen 80;
-
-    server_name  pdm.vm.test;
-    set $MAGE_ROOT /pdm;
-
-    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
-
-    fastcgi_buffers 16 16k;
-    fastcgi_buffer_size 32k;
-    proxy_buffer_size 128k;
-    proxy_buffers 4 256k;
-    proxy_busy_buffers_size 256k;
-
-    error_log /var/log/nginx/error_log error;
-}
-
-server {
-    listen 443 ssl http2;
-
-    server_name  pdm.vm.test;
-    set $MAGE_ROOT /pdm;
-
-    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
-    include /opt/docker/etc/nginx/vhost.d/ssl.conf;
-
-
-    fastcgi_buffers 16 16k;
-    fastcgi_buffer_size 32k;
-    proxy_buffer_size 128k;
-    proxy_buffers 4 256k;
-    proxy_busy_buffers_size 256k;
-
-    error_log /var/log/nginx/error_log error;
-}
-
-server {
-    listen 80;
-
-    server_name  pcms.vm.test;
-    set $MAGE_ROOT /pcms;
-
-    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
-
-    fastcgi_buffers 16 16k;
-    fastcgi_buffer_size 32k;
-    proxy_buffer_size 128k;
-    proxy_buffers 4 256k;
-    proxy_busy_buffers_size 256k;
-
-    error_log /var/log/nginx/error_log error;
-}
-
-server {
-    listen 443 ssl http2;
-
-    server_name  pcms.vm.test;
-    set $MAGE_ROOT /pcms;
-
-    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
-    include /opt/docker/etc/nginx/vhost.d/ssl.conf;
-
-
-    fastcgi_buffers 16 16k;
-    fastcgi_buffer_size 32k;
-    proxy_buffer_size 128k;
-    proxy_buffers 4 256k;
-    proxy_busy_buffers_size 256k;
-
-    error_log /var/log/nginx/error_log error;
-}
-
-server {
-    listen 80;
-
-    server_name  blank242.vm.test;
-    set $MAGE_ROOT /blank242;
-
-    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
-
-    fastcgi_buffers 16 16k;
-    fastcgi_buffer_size 32k;
-    proxy_buffer_size 128k;
-    proxy_buffers 4 256k;
-    proxy_busy_buffers_size 256k;
-
-    error_log /var/log/nginx/error_log error;
-}
-
-server {
-    listen 443 ssl http2;
-
-    server_name  blank242.vm.test;
-    set $MAGE_ROOT /blank242;
-
-    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
-    include /opt/docker/etc/nginx/vhost.d/ssl.conf;
-
-
-    fastcgi_buffers 16 16k;
-    fastcgi_buffer_size 32k;
-    proxy_buffer_size 128k;
-    proxy_buffers 4 256k;
-    proxy_busy_buffers_size 256k;
-
-    error_log /var/log/nginx/error_log error;
-}
