--- a/bin/webserver/php/php.ini
+++ b/bin/webserver/php/php.ini
@@ -19,17 +19,25 @@ upload_max_filesize = 2M
 
 ; debugger settings
 ;xdebug.remote_autostart=1
-xdebug.remote_enable=1
-xdebug.remote_handler=dbgp
-xdebug.remote_mode=req
-xdebug.remote_port=9000
-xdebug.remote_connect_back=0
-xdebug.remote_log = /app/xdebug.log
+
+; XDEBUG 2 start
+;xdebug.remote_enable=1
+;xdebug.remote_handler=dbgp
+;xdebug.remote_mode=req
+;xdebug.remote_port=9000
+;xdebug.remote_connect_back=0
+;xdebug.remote_log = /app/xdebug.log
+; XDEBUG 2 end
 
 ; profiler settings
 ;xdebug.profiler_append=0
-xdebug.profiler_enable=0
+;xdebug.profiler_enable=0
 ;xdebug.profiler_enable_trigger=0
 ;xdebug.profiler_output_dir="/var/log/xdebug/profile"
 ;xdebug.profiler_output_name=timestamp
 
+; XDEBUG 3
+xdebug.mode=debug
+xdebug.start_with_request=yes
+xdebug.client_host="host.docker.internal"
+;xdebug.log="/app/xdebug.log"
