--- a/config/nginx/vhost.conf
+++ b/config/nginx/vhost.conf
@@ -69,8 +69,8 @@ server {
 server {
     listen 443 ssl http2;
 
-    server_name pos-pcms.vm.test;
-    set $MAGE_ROOT /src/pos_pcms;
+    server_name pos-ecom.vm.test;
+    set $MAGE_ROOT /src/pos_ecom;
 
     include /opt/docker/etc/nginx/vhost.d/mgt.conf;
     include /opt/docker/etc/nginx/vhost.d/ssl.conf;
