--- a/config/nginx/vhost.conf
+++ b/config/nginx/vhost.conf
@@ -1,61 +1,10 @@
-# server {
-#     listen 80;
-
-#     server_name  yt.vm.test;
-#     set $MAGE_ROOT /app/yt;
-
-#     include /opt/docker/etc/nginx/vhost.d/mgt.conf;
-
-#     error_log /var/log/nginx/error_log error;
-# }
-
-# ##############
-# # SSL
-# ##############
-
-# server {
-#     listen 443 ssl http2;
- 
-#     server_name  yt.vm.test;
-#     set $MAGE_ROOT /app/yt;
-
-#     fastcgi_buffers 16 16k;
-#     fastcgi_buffer_size 32k;
-#     proxy_buffer_size 128k;
-#     proxy_buffers 4 256k;
-#     proxy_busy_buffers_size 256k;
-
-#     include /opt/docker/etc/nginx/vhost.d/mgt.conf;
-#     include /opt/docker/etc/nginx/vhost.d/ssl.conf;
-
-#     error_log /var/log/nginx/error_log error;
-# }
-
 server {
     listen 80;
 
-    server_name  mkt.vm.test;
-    set $MAGE_ROOT /ggg_mkt;
+    server_name  mgt24.test.lc;
+    set $MAGE_ROOT /mgt24;
 
-    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
-
-    fastcgi_buffers 16 16k;
-    fastcgi_buffer_size 32k;
-    proxy_buffer_size 128k;
-    proxy_buffers 4 256k;
-    proxy_busy_buffers_size 256k;
-
-    error_log /var/log/nginx/error_log error;
-}
-
-server {
-    listen 443 ssl http2;
-
-    server_name mkt.vm.test;
-    set $MAGE_ROOT /ggg_mkt;
-
-    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
-    include /opt/docker/etc/nginx/vhost.d/ssl.conf;
+    include /opt/docker/etc/nginx/mgt/mgt.conf;
 
     fastcgi_buffers 16 16k;
     fastcgi_buffer_size 32k;
@@ -69,11 +18,16 @@ server {
 server {
     listen 443 ssl http2;
 
-    server_name pos-ecom.vm.test;
-    set $MAGE_ROOT /src/pos_ecom;
+    ssl           on;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2; # not possible to do exclusive
 
-    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
-    include /opt/docker/etc/nginx/vhost.d/ssl.conf;
+    ssl_certificate     /opt/docker/etc/nginx/ssl/test.lc.pem;
+    ssl_certificate_key /opt/docker/etc/nginx/ssl/test.lc-key.pem;
+
+    server_name mgt24.test.lc;
+    set $MAGE_ROOT /mgt24;
+
+    include /opt/docker/etc/nginx/mgt/mgt.conf;
 
     fastcgi_buffers 16 16k;
     fastcgi_buffer_size 32k;
