--- a/bin/webserver/nginx/vhost.conf
+++ b/bin/webserver/nginx/vhost.conf
@@ -8,7 +8,8 @@ server {
     server_name  _ *.vm docker *.lc;
 
     error_log /var/log/nginx/error_log warn;
-    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
+
+    include /opt/docker/etc/nginx/vhost.d/*.conf;
 }
 
 ##############
@@ -18,8 +19,14 @@ server {
 server {
     listen 443 default_server ssl http2;
 
+    ssl           on;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2; # not possible to do exclusive
+
+    ssl_certificate     /opt/docker/etc/nginx/ssl/localhost.pem;
+    ssl_certificate_key /opt/docker/etc/nginx/ssl/localhost-key.pem;
+
     server_name  _ *.vm docker *.lc;
     error_log /var/log/nginx/error_log warn;
-    include /opt/docker/etc/nginx/vhost.d/mgt.conf;
-    include /opt/docker/etc/nginx/vhost.d/ssl.conf;
+
+    include /opt/docker/etc/nginx/vhost.d/*.conf;
 }
