--- a/bin/webserver/nginx/vhost.conf
+++ b/bin/webserver/nginx/vhost.conf
@@ -2,6 +2,14 @@
 # Default magento server
 ##############
 
+# Nginx upstream sent too big header while reading response header from upstream
+
+fastcgi_buffers 16 16k;
+fastcgi_buffer_size 32k;
+proxy_buffer_size 128k;
+proxy_buffers 4 256k;
+proxy_busy_buffers_size 256k;
+
 server {
     listen 80 default_server;
 
