--- a/config/nginx/vhost.conf
+++ b/config/nginx/vhost.conf
@@ -21,11 +21,57 @@ server {
     ssl           on;
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2; # not possible to do exclusive
 
-    ssl_certificate     /opt/docker/etc/nginx/ssl/test.lc.pem;
-    ssl_certificate_key /opt/docker/etc/nginx/ssl/test.lc-key.pem;
+    ssl_certificate     /opt/docker/etc/nginx/ssl/test.lc+4.pem;
+    ssl_certificate_key /opt/docker/etc/nginx/ssl/test.lc+4-key.pem;
 
     server_name mgt24.test.lc;
     set $MAGE_ROOT /mgt24;
+
+    include /opt/docker/etc/nginx/mgt/mgt.conf;
+
+    fastcgi_buffers 16 16k;
+    fastcgi_buffer_size 32k;
+    proxy_buffer_size 128k;
+    proxy_buffers 4 256k;
+    proxy_busy_buffers_size 256k;
+
+    error_log /var/log/nginx/error_log error;
+}
+
+server {
+    listen 443 ssl http2;
+
+    ssl           on;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2; # not possible to do exclusive
+
+    ssl_certificate     /opt/docker/etc/nginx/ssl/test.lc+4.pem;
+    ssl_certificate_key /opt/docker/etc/nginx/ssl/test.lc+4-key.pem;
+
+    server_name pim.test.lc;
+    set $MAGE_ROOT /pim;
+
+    include /opt/docker/etc/nginx/mgt/mgt.conf;
+
+    fastcgi_buffers 16 16k;
+    fastcgi_buffer_size 32k;
+    proxy_buffer_size 128k;
+    proxy_buffers 4 256k;
+    proxy_busy_buffers_size 256k;
+
+    error_log /var/log/nginx/error_log error;
+}
+
+server {
+    listen 443 ssl http2;
+
+    ssl           on;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2; # not possible to do exclusive
+
+    ssl_certificate     /opt/docker/etc/nginx/ssl/test.lc+4.pem;
+    ssl_certificate_key /opt/docker/etc/nginx/ssl/test.lc+4-key.pem;
+
+    server_name mgt242.test.lc;
+    set $MAGE_ROOT /mgt242_default;
 
     include /opt/docker/etc/nginx/mgt/mgt.conf;
 
