feat: upgrade mysql version 8

--- a/config/nginx/vhost.conf
+++ b/config/nginx/vhost.conf
@@ -34,8 +34,8 @@
 server {
     listen 80;
 
-    server_name  mkt.vm.test;
-    set $MAGE_ROOT /ggg_mkt;
+    server_name  pim.vm.test;
+    set $MAGE_ROOT /pim;
 
     include /opt/docker/etc/nginx/vhost.d/mgt.conf;
 
@@ -51,8 +51,8 @@ server {
 server {
     listen 443 ssl http2;
 
-    server_name mkt.vm.test;
-    set $MAGE_ROOT /ggg_mkt;
+    server_name pim.vm.test;
+    set $MAGE_ROOT /pim;
 
     include /opt/docker/etc/nginx/vhost.d/mgt.conf;
     include /opt/docker/etc/nginx/vhost.d/ssl.conf;
